# merkaba

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md  manual.md
docs/integrations/: qmd.md
docs/plans/: 2026-03-01-qmd-integration-design.md
docs/superpowers/plans/: 2026-03-16-context-pipeline-plan.md
docs/superpowers/specs/: 2026-03-16-context-pipeline-design.md
src/merkaba/: agent.py  cli.py  db.py  extensions.py  init.py  llm.py  paths.py  protocols.py
src/merkaba/approval/: __init__.py  graduation.py  queue.py  secure.py  telegram.py
src/merkaba/config/: SOUL.md.example  USER.md.example  (+6 more)
tests/: conftest.py  test_action_queue.py  test_adversarial.py  test_agent.py  test_agent_context.py  test_agent_hot_reload.py  test_agent_interruption.py  test_agent_plugins.py  test_agent_run.py  test_aieos.py  test_analyzer.py  test_approval_telegram.py  test_backup.py  test_backup_safety.py  test_browser_tool.py  test_builtin_tools.py  test_calendar_adapter.py  test_classifier.py  test_cli.py  test_cli_approval.py  test_cli_business.py  test_cli_config.py  test_cli_integrations.py  test_cli_memory.py  test_cli_migration.py  test_cli_observe.py  test_cli_pairing.py  test_cli_plugins.py  test_cli_security.py  test_cli_tasks.py  test_cli_telegram.py  test_code_worker.py  test_compression.py  test_config.py  test_config_defaults.py  test_config_loader.py  test_config_utils.py  test_config_validation.py  test_context_budget.py  test_contradiction.py  (+114 more)
tests/e2e/: conftest.py  test_e2e_approval.py  test_e2e_backup.py  test_e2e_business.py  test_e2e_chat.py  test_e2e_cli_basics.py  test_e2e_code.py  test_e2e_config.py  test_e2e_control.py  test_e2e_data.py  test_e2e_diagnostics.py  test_e2e_forge.py  test_e2e_init.py  test_e2e_memory.py  test_e2e_memory_conversations.py  test_e2e_models.py  test_e2e_plugins.py  test_e2e_scheduler.py  test_e2e_security.py  test_e2e_tasks.py  test_e2e_web.py
web/: index.html  merkaba-large-preview-v1.html  merkaba-large-preview-v2.html  merkaba-large-preview.html  orb-approved.html  package-lock.json  package.json  tesseract.html  vite.config.ts  vitest.config.ts
web/src/: App.tsx  index.css
(+180 files in other folders)
