[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/merkaba"]

[project]
name = "merkaba"
version = "0.1.0"
description = "Local AI agent framework — build autonomous agents with persistent memory, tool use, and multi-model routing"
license = {text = "MIT"}
requires-python = ">=3.11"
readme = "README.md"
authors = [
    { name = "Cevin Slmn" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "ollama>=0.1.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-telegram-bot>=21.0",
    "python-frontmatter>=1.0.0",
    "keyring>=25.0.0",
    "pip-audit>=2.10.0",
    "chromadb>=0.4.0",
    "croniter>=1.3.0",
    "stripe>=8.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.9",
    "pyotp>=2.9.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
]
slack = [
    "slack_sdk>=3.21.0",
]
github = [
    "PyGithub>=2.0.0",
]
twitter = [
    "tweepy>=4.14.0",
]
calendar = [
    "pyobjc-framework-EventKit>=10.0; sys_platform == 'darwin'",
]
anthropic = [
    "anthropic>=0.25.0",
]
openai = [
    "openai>=1.12.0",
]
cloud = [
    "anthropic>=0.25.0",
    "openai>=1.12.0",
]
all-integrations = [
    "slack_sdk>=3.21.0",
    "PyGithub>=2.0.0",
    "tweepy>=4.14.0",
    "pyobjc-framework-EventKit>=10.0; sys_platform == 'darwin'",
    "stripe>=8.0.0",
]

[project.scripts]
merkaba = "merkaba.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
